# biomappings-curation-app

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .sops.yaml  Caddyfile  README.md  app.py  compose.yaml  create-biomappings-duckdb.sql  flask.env  init-biomappings-db-postgres.sql  init-postgres.sql  oauth2-proxy.toml  pyproject.toml  wsgi.py
env/: app.env  app.public  app.secret.sops.env  caddy.env  common.env  oauth2-proxy.env  oauth2-proxy.secret.sops.env  oauth2-proxy.secret.tpl  secret.env.sops.env  secret.sops.env
resources/app/: app.dockerfile  app.entrypoint  gunicorn.conf.py
resources/app/templates/: base.html  home.html  summary.html
resources/caddy/: caddy.dockerfile
resources/caddy/conf/: Caddyfile
resources/oauth2-proxy/: oauth2-proxy.toml
resources/systemd/: biomappings-curation-app.service  update-biomappings-and-redeploy-biomappings-curation-app.service  update-biomappings-and-redeploy-biomappings-curation-app.sh  update-biomappings-and-redeploy-biomappings-curation-app.timer
templates/: home.html
